<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/indicate_back"
                android:layout_marginRight="8dp"
                ></ImageView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:src="@drawable/w_indicate">
            </ImageView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:src="@drawable/indicate_back">
            </ImageView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/indicate_back">
            </ImageView>
        </LinearLayout>
        <TextView
            android:id="@+id/today_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spoqa_han_sans_neo_light"
            android:text="@string/fragment_second_start"
            android:textColor="@color/w_main_text"
            android:textSize="28dp"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/today_weather_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="67dp"
                android:fontFamily="@font/spoqa_han_sans_neo_bold"
                android:gravity="left"
                android:text="@string/fragment_second_middle"
                android:textColor="@color/circle"
                android:textSize="40dp"
                android:textStyle="bold"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/spoqa_han_sans_neo_bold"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:textColor="@color/circle"
                android:text="@string/fragment_second_son"
                android:id="@+id/son"
                android:textSize="28dp">
            </TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:visibility="gone"
                android:id="@+id/w_son"
                android:src="@drawable/w_son"></ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rain"
                    android:fontFamily="@font/spoqa_han_sans_neo_bold"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/circle"
                    android:text="@string/fragment_second_rain"
                    android:textSize="28dp">
                </TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/w_rain"
                android:src="@drawable/w_rain"></ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/spoqa_han_sans_neo_bold"
                    android:id="@+id/cloud"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/circle"
                    android:text="@string/fragment_second_cloud"

                    android:textSize="28dp">
                </TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/w_cloud"
                android:src="@drawable/w_cloud"></ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/snow"
                    android:fontFamily="@font/spoqa_han_sans_neo_bold"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/circle"
                    android:text="@string/fragment_second_snow"
                    android:textSize="28dp">
                </TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/w_snow"
                android:src="@drawable/w_snow"></ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/spoqa_han_sans_neo_bold"
                    android:textStyle="bold"
                    android:id="@+id/bunge"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/circle"
                    android:text="@string/fragment_second_bunge"
                    android:textSize="28dp">
                </TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/w_bunge"
                android:visibility="gone"
                android:src="@drawable/w_bunge"></ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/last"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:text="@string/fragment_second_last"
                android:textColor="@color/grayblack"
                android:textSize="14dp"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/end"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/spoqa_han_sans_neo_thin"
                android:text="@string/fragment_second_end"
                android:textColor="@color/grayblack"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>
    <!--    <Spinner-->
<!--        android:id="@+id/txt_question_type"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="28dp"-->
<!--        android:textColor="@color/circle"-->
<!--        android:spinnerMode="dropdown"-->
<!--        android:gravity="right"></Spinner>-->
</LinearLayout>