<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/fragment_third"
    android:gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/indicate_back"
                android:layout_marginRight="8dp"
                ></ImageView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:src="@drawable/indicate_back">
            </ImageView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:src="@drawable/w_indicate">
            </ImageView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/indicate_back">
            </ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_thrid_q1"
            android:textSize="16dp"
            android:fontFamily="@font/spoqa_han_sans_neo_bold"
            android:textColor="@color/w_main_text"
            ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_thrid_q2"
                android:textSize="16dp"
                android:layout_marginLeft="6dp"
                android:fontFamily="@font/spoqa_han_sans_neo_light"
                android:textColor="@color/w_main_text"
                ></TextView>

        </LinearLayout>
        <RatingBar
            android:id="@+id/q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="0.5"
            android:progressTint="@color/circle"
            android:secondaryProgressTint="@color/circle"
            android:progressBackgroundTint="#d1d1d1"
            style="?android:attr/ratingBarStyleIndicator"
            android:isIndicator="false"
            android:rating="0.0"
            android:layout_marginBottom="64.45dp"
            android:numStars="5"
            ></RatingBar>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_thrid_q3"
                android:textSize="16dp"
                android:fontFamily="@font/spoqa_han_sans_neo_bold"
                android:textColor="@color/w_main_text"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_thrid_q4"
                android:textSize="16dp"
                android:layout_marginLeft="6dp"
                android:fontFamily="@font/spoqa_han_sans_neo_light"
                android:textColor="@color/w_main_text"
                ></TextView>
        </LinearLayout>
        <RatingBar
            android:id="@+id/q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="0.5"
            android:progressTint="@color/circle"
            android:isIndicator="false"
            android:secondaryProgressTint="@color/circle"
            android:progressBackgroundTint="#d1d1d1"
            style="?android:attr/ratingBarStyleIndicator"
            android:numStars="5"
            android:rating="0.0"
            android:layout_marginBottom="64.45dp"
            ></RatingBar>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_thrid_q5"
                android:textSize="16dp"
                android:fontFamily="@font/spoqa_han_sans_neo_bold"
                android:textColor="@color/w_main_text"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_thrid_q6"
                android:textSize="16dp"
                android:layout_marginLeft="6dp"
                android:fontFamily="@font/spoqa_han_sans_neo_light"
                android:textColor="@color/w_main_text"
                ></TextView>
        </LinearLayout>
        <RatingBar
            android:id="@+id/q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="0.5"
            android:progressTint="@color/circle"
            android:secondaryProgressTint="@color/circle"
            android:progressBackgroundTint="#d1d1d1"
            android:rating="0.0"
            android:numStars="5"
            android:isIndicator="false"
            style="?android:attr/ratingBarStyleIndicator"
            ></RatingBar>
    </LinearLayout>
</LinearLayout>