<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/focus"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/w_indicate"
                android:layout_marginRight="8dp"
                ></ImageView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:src="@drawable/indicate_back">
            </ImageView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:src="@drawable/indicate_back">
            </ImageView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/indicate_back">
            </ImageView>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spoqa_han_sans_neo_light"
            android:text="@string/fragment_frist"
            android:textColor="@color/w_main_text"
            android:textSize="28dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spoqa_han_sans_neo_bold"
                android:gravity="left"
                android:textColor="@color/circle"
                android:textSize="36dp"
                android:background="@null"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lastOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:text="@string/fragment_frist_last"
                android:textColor="@color/grayblack"
                android:textSize="14dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/spoqa_han_sans_neo_thin"
                android:layout_marginTop="5dp"
                android:text="@string/fragment_frist_end"
                android:textColor="@color/grayblack"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>

    <CalendarView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"></CalendarView>
</LinearLayout>